--- a/src/app/lab/Research_Centre_For_Asset_Performance/RCFAP.component.html
+++ b/src/app/lab/Research_Centre_For_Asset_Performance/RCFAP.component.html
@@ -4,7 +4,7 @@
 
   <!-- Section 1: Image left, content right -->
   <section class="im-section">
-    <img src="assets/labs/IOT/System architecture.jpg" alt="CPEA Lab Overview">
+    <img src="assets/labs/IOT/asset1.jpg" alt="CPEA Lab Overview">
     <div class="im-content">
       <h2>Overview</h2>
       <p>
@@ -15,7 +15,7 @@
 
   <!-- Section 2: Image right, content left -->
   <section class="im-section reverse">
-    <img src="assets/labs/IOT/Picture2.jpg" alt="RCFAP Lab Services">
+    <img src="assets/labs/IOT/asset2.jpg" alt="RCFAP Lab Services">
     <div class="im-content">
       <h2>Services Offered</h2>
       <ul>
@@ -53,7 +53,7 @@
 
   <!-- Section 4: Software Tools & Communication Protocols -->
   <section class="im-section reverse section-4">
-    <img src="assets/labs/IOT/Picture4.jpg" alt="RCFAP Tools & Protocols">
+    <img src="assets/labs/IOT/asset3.jpeg" alt="RCFAP Tools & Protocols">
     <div class="im-content">
       <h2>Software Tools & Communication Protocols</h2>
 
